# demo

./: .gitignore
CMakeDemo/: CMakeLists.txt  CalculateSqrtConfig.h.in  calculate.cpp
CMakeDemo/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
cpp/cmakeInstallDemo/: CMakeLists.txt
cpp/cmakeInstallDemo/dynamicBuild/: CMakeCache.txt  Makefile  mymathapp
cpp/cmakeInstallDemo/staticBuild/: cmake_install.cmake  mymathapp
cpp/cmakeInstallDemo/test_folder/: mymathApp.cc
cpp/cmakeSimpleDemo/: CMakeLists.txt  main.cpp
cpp/cppDynamicLibDemo/: a.out
cpp/cppStaticLibDemo/: a.out
cpp/helloClion/: CMakeLists.txt  main.cpp
cpp/learnTorch/: CMakeLists.txt  Storage.h  THGenerateAllTypes.h  THP.h  main.cpp  sumline.py
cpp/learnTorch/generic/: Storage.cpp  Storage.h
cpp/learnTorch/lib/TH/: CMakeLists.txt  TH.h  THAllocator.h  THStorage.h
cpp/learnTorch/lib/TH/generic/: THStorage.h
cpp/learnTorch/torch/csrc/: Storage.h
cpp/learnTorch/torch/csrc/generic/: Storage.h
cpp/learnTorch/torch/lib/: build_all.sh
python/setuptools/cextension/: usage.txt
python/setuptools/cextension/foo.egg-info/: PKG-INFO  SOURCES.txt
python/setuptools/cextension/other/: a.out  main.cpp  simple_main.cpp
python/setuptools/simple_demo/: setup.py  step.txt  test.py
python/setuptools/simple_demo/demo.egg-info/: SOURCES.txt
